--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -45,17 +45,6 @@ DOMAIN-SUFFIX,vd.l.qq.com,DIRECT
 DOMAIN-SUFFIX,goodreads.com,PROXY,force-remote-dns
 
 //me
-DOMAIN,gsp0.baidu.com,REJECT
-DOMAIN,caclick.baidu.com,REJECT
-DOMAIN,publish-pic-cpu.baidu.com,REJECT
-DOMAIN-SUFFIX,sofire.baidu.com,REJECT
-DOMAIN-SUFFIX,baifubao.com,REJECT
-DOMAIN,biaozhu.baidu.com,REJECT
-DOMAIN,hm.baidu.com,REJECT
-DOMAIN-SUFFIX,pingma.qq.com,REJECT
-DOMAIN,loc.map.baidu.com,REJECT
-DOMAIN,nsclick.baidu.com,REJECT
-DOMAIN,hmma.baidu.com,REJECT
 DOMAIN-SUFFIX,nuomi.com,REJECT
 
 DOMAIN,logs.amap.com,REJECT
@@ -597,176 +586,20 @@ DOMAIN,iyes.youku.com,REJECT
 DOMAIN,apppv.zol.com.cn,REJECT
 DOMAIN,pvnapp.zol.com.cn,REJECT
 
-# Internet Service Provider Hijacking Protection 运营商劫持保护
-DOMAIN-SUFFIX,17gouwuba.com,REJECT
-DOMAIN-SUFFIX,189zj.cn,REJECT
-DOMAIN-SUFFIX,285680.com,REJECT
-DOMAIN-SUFFIX,3721zh.com,REJECT
-DOMAIN-SUFFIX,4336wang.cn,REJECT
-DOMAIN-SUFFIX,51chumoping.com,REJECT
-DOMAIN-SUFFIX,58mingri.cn,REJECT
-DOMAIN-SUFFIX,58mingtian.cn,REJECT
-DOMAIN-SUFFIX,6d63d3.com,REJECT
-DOMAIN-SUFFIX,91veg.com,REJECT
-DOMAIN-SUFFIX,9s6q.cn,REJECT
-DOMAIN-SUFFIX,adsame.com,REJECT
-DOMAIN-SUFFIX,aiclk.com,REJECT
-DOMAIN-SUFFIX,akuai.top,REJECT
-DOMAIN-SUFFIX,atplay.cn,REJECT
-DOMAIN-SUFFIX,baiwanchuangyi.com,REJECT
-DOMAIN-SUFFIX,bayimob.com,REJECT
-DOMAIN-SUFFIX,beerto.cn,REJECT
-DOMAIN-SUFFIX,beilamusi.com,REJECT
-DOMAIN-SUFFIX,benshiw.net,REJECT
-DOMAIN-SUFFIX,bianxianmao.com,REJECT
-DOMAIN-SUFFIX,bryonypie.com,REJECT
-DOMAIN-SUFFIX,cishantao.com,REJECT
-DOMAIN-SUFFIX,cszlks.com,REJECT
-DOMAIN-SUFFIX,cudaojia.com,REJECT
-DOMAIN-SUFFIX,dafapromo.com,REJECT
-DOMAIN-SUFFIX,daitdai.com,REJECT
-DOMAIN-SUFFIX,dsaeerf.com,REJECT
-DOMAIN-SUFFIX,dugesheying.com,REJECT
-DOMAIN-SUFFIX,dv8c1t.cn,REJECT
-DOMAIN-SUFFIX,erdoscs.com,REJECT
-DOMAIN-SUFFIX,fan-yong.com,REJECT
-DOMAIN-SUFFIX,feih.com.cn,REJECT
-DOMAIN-SUFFIX,fjlqqc.com,REJECT
-DOMAIN-SUFFIX,fkku194.com,REJECT
-DOMAIN-SUFFIX,freedrive.cn,REJECT
-DOMAIN-SUFFIX,gclick.cn,REJECT
-DOMAIN-SUFFIX,goufanli100.com,REJECT
-DOMAIN-SUFFIX,gouwubang.com,REJECT
-DOMAIN-SUFFIX,haoshengtoys.com,REJECT
-DOMAIN-SUFFIX,ichaosheng.com,REJECT
-DOMAIN-SUFFIX,ishop789.com,REJECT
-DOMAIN-SUFFIX,jdkic.com,REJECT
-DOMAIN-SUFFIX,jiubuhua.com,REJECT
-DOMAIN-SUFFIX,jwg365.cn,REJECT
-DOMAIN-SUFFIX,kumihua.com,REJECT
-DOMAIN-SUFFIX,linktech.cn,REJECT
-DOMAIN-SUFFIX,ltheanine.cn,REJECT
-DOMAIN-SUFFIX,maipinshangmao.com,REJECT
-DOMAIN-SUFFIX,minisplat.cn,REJECT
-DOMAIN-SUFFIX,mkitgfs.com,REJECT
-DOMAIN-SUFFIX,mlnbike.com,REJECT
-DOMAIN-SUFFIX,newapi.com,REJECT
-DOMAIN-SUFFIX,pinzhitmall.com,REJECT
-DOMAIN-SUFFIX,poppyta.com,REJECT
-DOMAIN-SUFFIX,qichexin.com,REJECT
-DOMAIN-SUFFIX,qinchugudao.com,REJECT
-DOMAIN-SUFFIX,quanliyouxi.cn,REJECT
-DOMAIN-SUFFIX,qutaobi.com,REJECT
-DOMAIN-SUFFIX,ry51w.cn,REJECT
-DOMAIN-SUFFIX,sg536.cn,REJECT
-DOMAIN-SUFFIX,sifubo.cn,REJECT
-DOMAIN-SUFFIX,sifuce.cn,REJECT
-DOMAIN-SUFFIX,sifuda.cn,REJECT
-DOMAIN-SUFFIX,sifufu.cn,REJECT
-DOMAIN-SUFFIX,sifuge.cn,REJECT
-DOMAIN-SUFFIX,sifugu.cn,REJECT
-DOMAIN-SUFFIX,sifuhe.cn,REJECT
-DOMAIN-SUFFIX,sifuhu.cn,REJECT
-DOMAIN-SUFFIX,sifuji.cn,REJECT
-DOMAIN-SUFFIX,sifuka.cn,REJECT
-DOMAIN-SUFFIX,smgru.net,REJECT
-DOMAIN-SUFFIX,taoggou.com,REJECT
-DOMAIN-SUFFIX,tcxshop.com,REJECT
-DOMAIN-SUFFIX,tjqonline.cn,REJECT
-DOMAIN-SUFFIX,topitme.com,REJECT
-DOMAIN-SUFFIX,tuia.cn,REJECT
-DOMAIN-SUFFIX,tuipenguin.com,REJECT
-DOMAIN-SUFFIX,tuitiger.com,REJECT
-DOMAIN-SUFFIX,wx16999.com,REJECT
-DOMAIN-SUFFIX,xiaohuau.xyz,REJECT
-DOMAIN-SUFFIX,yinmong.com,REJECT
-DOMAIN-SUFFIX,yiqifa.com,REJECT
-DOMAIN-SUFFIX,yitaopt.com,REJECT
-DOMAIN-SUFFIX,yukhj.com,REJECT
-DOMAIN-SUFFIX,zhaozecheng.cn,REJECT
-DOMAIN-SUFFIX,zhenxinet.com,REJECT
-DOMAIN-SUFFIX,zunmi.cn,REJECT
-DOMAIN-SUFFIX,zzd6.com,REJECT
-IP-CIDR,39.107.15.115/32,REJECT,no-resolve
-IP-CIDR,47.89.59.182/32,REJECT,no-resolve
-IP-CIDR,103.49.209.27/32,REJECT,no-resolve
-IP-CIDR,123.56.152.96/32,REJECT,no-resolve
-
-# Blocklist 黑名单
-DOMAIN-SUFFIX,kuaizip.com,REJECT
-DOMAIN-SUFFIX,mackeeper.com,REJECT
-
-# > CJ Marketing
-DOMAIN-SUFFIX,4009997658.com,REJECT
-DOMAIN-SUFFIX,abbyychina.com,REJECT
-DOMAIN-SUFFIX,bartender.cc,REJECT
-DOMAIN-SUFFIX,betterzip.net,REJECT
-DOMAIN-SUFFIX,beyondcompare.cc,REJECT
-DOMAIN-SUFFIX,bingdianhuanyuan.cn,REJECT
-DOMAIN-SUFFIX,chemdraw.com.cn,REJECT
-DOMAIN-SUFFIX,cjmakeding.com,REJECT
-DOMAIN-SUFFIX,cjmkt.com,REJECT
-DOMAIN-SUFFIX,codesoftchina.com,REJECT
-DOMAIN-SUFFIX,coreldrawchina.com,REJECT
-DOMAIN-SUFFIX,crossoverchina.com,REJECT
-DOMAIN-SUFFIX,easyrecoverychina.com,REJECT
-DOMAIN-SUFFIX,ediuschina.com,REJECT
-DOMAIN-SUFFIX,flstudiochina.com,REJECT
-DOMAIN-SUFFIX,formysql.com,REJECT
-DOMAIN-SUFFIX,guitarpro.cc,REJECT
-DOMAIN-SUFFIX,huishenghuiying.com.cn,REJECT
-DOMAIN-SUFFIX,hypersnap.net,REJECT
-DOMAIN-SUFFIX,iconworkshop.cn,REJECT
-DOMAIN-SUFFIX,imindmap.cc,REJECT
-DOMAIN-SUFFIX,jihehuaban.com.cn,REJECT
-DOMAIN-SUFFIX,keyshot.cc,REJECT
-DOMAIN-SUFFIX,kingdeecn.cn,REJECT
-DOMAIN-SUFFIX,logoshejishi.com,REJECT
-DOMAIN-SUFFIX,mairuan.cn,REJECT
-DOMAIN-SUFFIX,mairuan.com,REJECT
-DOMAIN-SUFFIX,mairuan.com.cn,REJECT
-DOMAIN-SUFFIX,mairuan.net,REJECT
-DOMAIN-SUFFIX,mairuanwang.com,REJECT
-DOMAIN-SUFFIX,makeding.com,REJECT
-DOMAIN-SUFFIX,mathtype.cn,REJECT
-DOMAIN-SUFFIX,mindmanager.cc,REJECT
-DOMAIN-SUFFIX,mindmapper.cc,REJECT
-DOMAIN-SUFFIX,mycleanmymac.com,REJECT
-DOMAIN-SUFFIX,nicelabel.cc,REJECT
-DOMAIN-SUFFIX,ntfsformac.cc,REJECT
-DOMAIN-SUFFIX,ntfsformac.cn,REJECT
-DOMAIN-SUFFIX,overturechina.com,REJECT
-DOMAIN-SUFFIX,passwordrecovery.cn,REJECT
-DOMAIN-SUFFIX,pdfexpert.cc,REJECT
-DOMAIN-SUFFIX,shankejingling.com,REJECT
-DOMAIN-SUFFIX,ultraiso.net,REJECT
-DOMAIN-SUFFIX,vegaschina.cn,REJECT
-DOMAIN-SUFFIX,xmindchina.net,REJECT
-DOMAIN-SUFFIX,xshellcn.com,REJECT
-DOMAIN-SUFFIX,yihuifu.cn,REJECT
-DOMAIN-SUFFIX,yuanchengxiezuo.com,REJECT
-DOMAIN-SUFFIX,zbrushcn.com,REJECT
-DOMAIN-SUFFIX,zhzzx.com,REJECT
-
 
 //me
-DOMAIN-SUFFIX,pximg.net,PROXY
-DOMAIN-SUFFIX,wikimedia.org,PROXY
 IP-CIDR,198.11.184.0/21,DIRECT
 IP-CIDR,198.11.128.0/18,DIRECT
 IP-CIDR,192.126.125.210/32,DIRECT
 IP-CIDR,140.101.144.98/32,PROXY
 DOMAIN-KEYWORD,github,PROXY
 IP-CIDR,34.80.56.62/32,DIRECT
-DOMAIN-SUFFIX,muncloud.com,PROXY
 DOMAIN,e.crashlytics.com,DIRECT
-DOMAIN-SUFFIX,digicert.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,ampproject.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,ampproject.org,PROXY,force-remote-dns
+DOMAIN-SUFFIX,digicert.com,PROXY
+DOMAIN-SUFFIX,ampproject.net,PROXY
+DOMAIN-SUFFIX,ampproject.org,PROXY
 DOMAIN-SUFFIX,cmbchina.com,DIRECT
-DOMAIN-SUFFIX,cmbchina.com,DIRECT
-DOMAIN-SUFFIX,beautylegmm.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,pixhost.to,PROXY,force-remote-dns
+DOMAIN-SUFFIX,beautylegmm.com,PROXY
 DOMAIN-SUFFIX,tiqcdn.com,DIRECT
 DOMAIN-SUFFIX,aolcdn.com,DIRECT
 DOMAIN-SUFFIX,mtvip.net,DIRECT
@@ -776,22 +609,47 @@ DOMAIN-SUFFIX,pthome.net,DIRECT
 
 DOMAIN-SUFFIX,acompli.net,PROXY,force-remote-dns
 DOMAIN-SUFFIX,helpshift.com,PROXY,force-remote-dns
-
-DOMAIN-SUFFIX,evernote.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,ssr.sh,PROXY,force-remote-dns
-DOMAIN-SUFFIX,sehuatang.org,PROXY,force-remote-dns
-DOMAIN-SUFFIX,sehuatang.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,zaobao.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,maying.co,PROXY,force-remote-dns
-DOMAIN,content.jwplatform.com,PROXY,force-remote-dns
-DOMAIN,videos-f.jwpsrv.com,PROXY,force-remote-dns
-
+DOMAIN-SUFFIX,baldrsky.com,PROXY
+DOMAIN-SUFFIX,right.com.cn,PROXY
+DOMAIN-SUFFIX,pixiv.cat,PROXY
+DOMAIN-SUFFIX,pximg.net,PROXY
+DOMAIN-SUFFIX,pixhost.to,PROXY
+DOMAIN-SUFFIX,amplitude.com,PROXY
+DOMAIN-SUFFIX,intercomcdn.com,PROXY
+DOMAIN-SUFFIX,segment.io,PROXY
+DOMAIN-SUFFIX,intercom.io,PROXY
+DOMAIN-SUFFIX,notion.so,PROXY
+DOMAIN-SUFFIX,weserv.nl,PROXY
+DOMAIN-SUFFIX,inoreader.com,PROXY
+DOMAIN-SUFFIX,feedx.co,PROXY
+DOMAIN-SUFFIX,feedx.net,PROXY
+DOMAIN-SUFFIX,liuli.in,PROXY
+DOMAIN-SUFFIX,acg.gy,PROXY
+DOMAIN-SUFFIX,kindle4rss.com,PROXY
+DOMAIN-SUFFIX,dmhy.org,PROXY
+DOMAIN-SUFFIX,rsshub.app,PROXY
+DOMAIN-SUFFIX,evernote.com,PROXY
+DOMAIN-SUFFIX,sehuatuchuang.com,PROXY
+DOMAIN-SUFFIX,sehuatang.org,PROXY
+DOMAIN-SUFFIX,sehuatang.com,PROXY
+DOMAIN-SUFFIX,zaobao.com,PROXY
+DOMAIN-SUFFIX,zaobao.com.sg,PROXY
+DOMAIN-SUFFIX,dlercloud.me,PROXY
+DOMAIN-SUFFIX,muncloud.net,PROXY
+DOMAIN-SUFFIX,ssr.sh,PROXY
+DOMAIN-SUFFIX,maying.co,PROXY
+DOMAIN,content.jwplatform.com,PROXY
+DOMAIN,videos-f.jwpsrv.com,PROXY
+DOMAIN-SUFFIX,wikimedia.org,PROXY
+DOMAIN-SUFFIX,beautylegmm.com,PROXY
+DOMAIN-SUFFIX,ft.com,PROXY
+DOMAIN,rss.rrys.tv,PROXY
 
 //油管
-USER-AGENT,*youtube*,olo,force-remote-dns
-DOMAIN-SUFFIX,googlevideo.com,olo,force-remote-dns
-DOMAIN-SUFFIX,youtube.com,olo,force-remote-dns
-DOMAIN,youtubei.googleapis.com,olo,force-remote-dns
+USER-AGENT,*youtube*,olo
+DOMAIN-SUFFIX,googlevideo.com,olo
+DOMAIN-SUFFIX,youtube.com,olo
+DOMAIN,youtubei.googleapis.com,olo
 
 // Microsoft
 USER-AGENT,Microsoft*,策略
