--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -108,7 +108,6 @@ DOMAIN,analyticsinsights-pa.googleapis.com,PROXY
 DOMAIN,analyticsreporting.googleapis.com,PROXY
 DOMAIN-SUFFIX,vd.l.qq.com,DIRECT
 # > General
-DOMAIN-KEYWORD,adservice,REJECT
 DOMAIN-KEYWORD,analytics,REJECT
 DOMAIN-KEYWORD,analysis,REJECT
 DOMAIN-KEYWORD,trace,REJECT
@@ -388,17 +387,9 @@ DOMAIN,adashbc.ut.taobao.com,REJECT
 DOMAIN,adash-c.ut.taobao.com,REJECT
 DOMAIN,adashxgc.ut.taobao.com,REJECT
 DOMAIN,adashx4yt.m.taobao.com,REJECT
-DOMAIN,amdc.m.taobao.com,REJECT
 DOMAIN,apoll.m.taobao.com,REJECT
 DOMAIN,nbsdk-baichuan.alicdn.com,REJECT
 DOMAIN,tunion-api.m.taobao.com,REJECT
-# > AutoHome
-DOMAIN,adproxy.autohome.com.cn,REJECT
-DOMAIN,rd.autohome.com.cn,REJECT
-DOMAIN,al.autohome.com.cn,REJECT
-DOMAIN,applogapi.autohome.com.cn,REJECT
-# (B)
-
 
 # > Baidu
 DOMAIN,eclick.baidu.com,REJECT
@@ -452,9 +443,7 @@ DOMAIN,galaxy.bjcathay.com,REJECT
 DOMAIN,mdrecv.app.cntvwb.cn,REJECT
 DOMAIN,sdapprecv.app.cntvwb.cn,REJECT
 DOMAIN,vdapprecv.app.cntvwb.cn,REJECT
-# > ChinaNet
-DOMAIN,admarket.21cn.com,REJECT
-DOMAIN,adshows.21cn.com,REJECT
+
 # (G)
 # > Google
 DOMAIN-SUFFIX,doubleclick.net,REJECT
@@ -607,8 +596,8 @@ DOMAIN-SUFFIX,lxysh.xyz,DIRECT
 DOMAIN-SUFFIX,cloudfront.net,DIRECT
 DOMAIN-SUFFIX,pthome.net,DIRECT
 
-DOMAIN-SUFFIX,acompli.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,helpshift.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,acompli.net,PROXY
+DOMAIN-SUFFIX,helpshift.com,PROXY
 DOMAIN-SUFFIX,baldrsky.com,PROXY
 DOMAIN-SUFFIX,right.com.cn,PROXY
 DOMAIN-SUFFIX,pixiv.cat,PROXY
