--- a/lhie1.conf
+++ b/lhie1.conf
@@ -16,9 +16,9 @@ proxy-test-url = http://www.qualcomm.cn/generate_204
 日本软银-1 = ss, jp.002.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=ss745201, udp-relay=true
 日本ALI1 = ss, 47.245.5.195, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 日本ALI2 = ss, 47.74.33.113, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-香港IPLC1 = ss, 120.79.73.29, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-澳门CTM6 = ss, ctm6.0tk8a3a1q4t94dler.com, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-杭州AZ = ss, 47.99.140.189, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+上海2 = ss, 47.100.193.49, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+澳门2 = ss, 122.100.173.150, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+杭州 = ss, 47.99.140.189, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 台湾1 = ss, 47.100.175.206, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 香港AZURE2 = ss, 52.175.79.144, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 香港AZURE6 = ss, 52.184.103.104, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
