--- a/lhie1.conf
+++ b/lhie1.conf
@@ -20,16 +20,16 @@ proxy-test-url = http://www.qualcomm.cn/generate_204
 澳门2 = ss, 122.100.173.150, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 杭州 = ss, 47.99.140.189, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 台湾1 = ss, 47.100.175.206, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-香港AZURE2 = ss, 52.175.79.144, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-香港AZURE6 = ss, 52.184.103.104, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+香港AE2 = ss, 52.175.79.144, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+香港AE6 = ss, 52.184.103.104, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 香港GT1 = ss, 193.110.202.198, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 香港GT2 = ss, 193.110.201.134, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 
 [Proxy Group]
-Proxy = select, 日本软银-1, 澳门CTM6, 杭州AZ, 香港AZURE6, 日本ALI1, 日本ALI2, 香港GT2
-油管 = select, Proxy, 日本ALI1, 日本ALI2, 日本软银-1
+Proxy = select, 日本软银-1, 澳门2, 杭州, 香港AE6, 日本ALI1, 日本ALI2, 香港GT2
+油管 = select, Proxy, 日本ALI1, 上海2, 日本软银-1
 tw = select, 日本软银-1, 台湾1
-game = select, DIRECT, Proxy, 香港AZURE2, 香港GT1, 香港GT2, 杭州AZ, 澳门CTM6
+game = select, DIRECT, Proxy, 香港AZURE2, 香港GT1, 香港GT2, 杭州, 澳门2
 Advertising = select, REJECT
 🍎 = select, DIRECT, Proxy
 
@@ -54,14 +54,11 @@ RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/proxy.list,Proxy
 RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/direct.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/game.list,game
 
-# Advertising Block 去广告以及隐私追踪保护
-# > Exclusions
 DOMAIN,analytics.google.com,Proxy
 DOMAIN,analyticsinsights-pa.googleapis.com,Proxy
 DOMAIN,analyticsreporting.googleapis.com,Proxy
 DOMAIN,api.dizhensubao.igexin.com,DIRECT
 DOMAIN-SUFFIX,vd.l.qq.com,DIRECT
-RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Advertising.list,Advertising
 
 # ForeignMedia 媒体应用
 # > Youtube
