--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -640,68 +640,74 @@ DOMAIN-SUFFIX,googlevideo.com,olo
 DOMAIN-SUFFIX,youtube.com,olo
 DOMAIN,youtubei.googleapis.com,olo
 
+//spark
+DOMAIN,api.amplitude.com,PROXY
+DOMAIN,app.smartmailcloud.com,PROXY
+DOMAIN,gate.hockeyapp.net,PROXY
+DOMAIN-SUFFIX,smartmailcloud.com,PROXY
+
 // Microsoft
-USER-AGENT,Microsoft*,策略
-USER-AGENT,OneDrive*,策略
-DOMAIN-KEYWORD,microsoft,策略
-DOMAIN-SUFFIX,bing.com,策略
-DOMAIN-SUFFIX,bing.net,策略
-DOMAIN-SUFFIX,cloudappsecurity.com,策略
-DOMAIN-SUFFIX,docs.com,策略
-DOMAIN-SUFFIX,hotmail.com,策略
-DOMAIN-SUFFIX,live.com,策略
-DOMAIN-SUFFIX,live.net,策略
-DOMAIN-SUFFIX,microsoft.com,策略
-DOMAIN-SUFFIX,msedge.net,策略
-DOMAIN-SUFFIX,msn.com,策略
-DOMAIN-SUFFIX,office.com,策略
-DOMAIN-SUFFIX,office.net,策略
-DOMAIN-SUFFIX,office365.com,策略
-DOMAIN-SUFFIX,onedrive.com,策略
-DOMAIN-SUFFIX,onenote.com,策略
-DOMAIN-SUFFIX,onenote.net,策略
-DOMAIN-SUFFIX,onmicrosoft.com,策略
-DOMAIN-SUFFIX,outlook.com,策略
-DOMAIN-SUFFIX,outlookgroups.ms,策略
-DOMAIN-SUFFIX,visualstudio.com,策略
-DOMAIN-SUFFIX,windows.com,策略
-DOMAIN-SUFFIX,windows.net,策略
-DOMAIN-SUFFIX,windowsupdate.com,策略
+USER-AGENT,Microsoft*,PROXY
+USER-AGENT,OneDrive*,PROXY
+DOMAIN-KEYWORD,microsoft,PROXY
+DOMAIN-SUFFIX,bing.com,PROXY
+DOMAIN-SUFFIX,bing.net,PROXY
+DOMAIN-SUFFIX,cloudappsecurity.com,PROXY
+DOMAIN-SUFFIX,docs.com,PROXY
+DOMAIN-SUFFIX,hotmail.com,PROXY
+DOMAIN-SUFFIX,live.com,PROXY
+DOMAIN-SUFFIX,live.net,PROXY
+DOMAIN-SUFFIX,microsoft.com,PROXY
+DOMAIN-SUFFIX,msedge.net,PROXY
+DOMAIN-SUFFIX,msn.com,PROXY
+DOMAIN-SUFFIX,office.com,PROXY
+DOMAIN-SUFFIX,office.net,PROXY
+DOMAIN-SUFFIX,office365.com,PROXY
+DOMAIN-SUFFIX,onedrive.com,PROXY
+DOMAIN-SUFFIX,onenote.com,PROXY
+DOMAIN-SUFFIX,onenote.net,PROXY
+DOMAIN-SUFFIX,onmicrosoft.com,PROXY
+DOMAIN-SUFFIX,outlook.com,PROXY
+DOMAIN-SUFFIX,outlookgroups.ms,PROXY
+DOMAIN-SUFFIX,visualstudio.com,PROXY
+DOMAIN-SUFFIX,windows.com,PROXY
+DOMAIN-SUFFIX,windows.net,PROXY
+DOMAIN-SUFFIX,windowsupdate.com,PROXY
 
 //Apple
-IP-CIDR,17.0.0.0/8,策略
-DOMAIN,appleiphonecell.com,策略
-USER-AGENT,AppStore*,策略
-USER-AGENT,com.apple.appstored*,策略
-USER-AGENT,cloudd*,策略
-DOMAIN-KEYWORD,icloud,策略
-DOMAIN-KEYWORD,itunes,策略
-DOMAIN-SUFFIX,aaplimg.com,策略
-DOMAIN-SUFFIX,apple.co,策略
-DOMAIN-SUFFIX,apple.com,策略
-DOMAIN-SUFFIX,appsto.re,策略
-DOMAIN-SUFFIX,cdn-apple.com,策略
-DOMAIN-SUFFIX,me.com,策略
-DOMAIN-SUFFIX,mzstatic.com,策略
-DOMAIN-SUFFIX,icloud.com,策略
-DOMAIN-SUFFIX,icloud-content.com,策略
-DOMAIN-SUFFIX,itunes.com,策略
-DOMAIN-SUFFIX,itunes-apple.com.akadns.net,策略
+IP-CIDR,17.0.0.0/8,PROXY
+DOMAIN,appleiphonecell.com,PROXY
+USER-AGENT,AppStore*,PROXY
+USER-AGENT,com.apple.appstored*,PROXY
+USER-AGENT,cloudd*,PROXY
+DOMAIN-KEYWORD,icloud,PROXY
+DOMAIN-KEYWORD,itunes,PROXY
+DOMAIN-SUFFIX,aaplimg.com,PROXY
+DOMAIN-SUFFIX,apple.co,PROXY
+DOMAIN-SUFFIX,apple.com,PROXY
+DOMAIN-SUFFIX,appsto.re,PROXY
+DOMAIN-SUFFIX,cdn-apple.com,PROXY
+DOMAIN-SUFFIX,me.com,PROXY
+DOMAIN-SUFFIX,mzstatic.com,PROXY
+DOMAIN-SUFFIX,icloud.com,PROXY
+DOMAIN-SUFFIX,icloud-content.com,PROXY
+DOMAIN-SUFFIX,itunes.com,PROXY
+DOMAIN-SUFFIX,itunes-apple.com.akadns.net,PROXY
 
-USER-AGENT,Argo*,PROXY,force-remote-dns
-DOMAIN-SUFFIX,netflix.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,netflix.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,nflxext.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,nflximg.com,PROXY,force-remote-dns
-DOMAIN-SUFFIX,nflximg.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,nflxso.net,PROXY,force-remote-dns
-DOMAIN-SUFFIX,nflxvideo.net,PROXY,force-remote-dns
+USER-AGENT,Argo*,PROXY
+DOMAIN-SUFFIX,netflix.com,PROXY
+DOMAIN-SUFFIX,netflix.net,PROXY
+DOMAIN-SUFFIX,nflxext.com,PROXY
+DOMAIN-SUFFIX,nflximg.com,PROXY
+DOMAIN-SUFFIX,nflximg.net,PROXY
+DOMAIN-SUFFIX,nflxso.net,PROXY
+DOMAIN-SUFFIX,nflxvideo.net,PROXY
 
-USER-AGENT,BBCiPlayer*,PROXY,force-remote-dns
-DOMAIN-SUFFIX,bbc.co.uk,PROXY,force-remote-dns
-DOMAIN-SUFFIX,bbci.co.uk,PROXY,force-remote-dns
-DOMAIN-KEYWORD,bbcfmt,PROXY,force-remote-dns
-DOMAIN-KEYWORD,uk-live,PROXY,force-remote-dns
+USER-AGENT,BBCiPlayer*,PROXY
+DOMAIN-SUFFIX,bbc.co.uk,PROXY
+DOMAIN-SUFFIX,bbci.co.uk,PROXY
+DOMAIN-KEYWORD,bbcfmt,PROXY
+DOMAIN-KEYWORD,uk-live,PROXY
 
 //动画疯
 USER-AGENT,Anime*,tw
@@ -1050,8 +1056,8 @@ IP-CIDR,74.119.76.0/22,PROXY,no-resolve
 IP-CIDR,173.194.0.0/16,PROXY,no-resolve
 IP-CIDR,74.125.0.0/16,PROXY,no-resolve
 
-DOMAIN-SUFFIX,abc.xyz,PROXY,force-remote-dns
-DOMAIN-SUFFIX,android.com,PROXY,force-remote-dns
+DOMAIN-SUFFIX,abc.xyz,PROXY
+DOMAIN-SUFFIX,android.com,PROXY
 DOMAIN-SUFFIX,androidify.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,dialogflow.com,PROXY,force-remote-dns
 DOMAIN-SUFFIX,autodraw.com,PROXY,force-remote-dns
