--- a/lhie1.conf
+++ b/lhie1.conf
@@ -18,8 +18,7 @@ proxy-test-url = http://www.qualcomm.cn/generate_204
 日本ALI2 = ss, 47.74.33.113, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 上海2 = ss, 47.100.193.49, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 澳门2 = ss, 122.100.173.150, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-澳门4
- = ss, 60.246.211.229, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+澳门6 = ss, 60.246.8.197, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 杭州 = ss, 47.99.140.189, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 台湾1 = ss, 47.100.175.206, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 香港AZ2 = ss, 52.175.79.144, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
