--- a/lhie1.conf
+++ b/lhie1.conf
@@ -13,17 +13,18 @@ internet-test-url = http://www.qualcomm.cn/generate_204
 proxy-test-url = http://www.qualcomm.cn/generate_204
 
 [Proxy]
-日本软银-1 = ss, jp.002.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=ss745201, udp-relay=true
+日本软银-1 = ss, 103.121.209.71, 11173, encrypt-method=chacha20, password=ss745201, udp-relay=true
 日本ALI1 = ss, 47.245.5.195, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-日本ALI2 = ss, 47.74.33.113, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+日本bbtec = ss, 103.125.250.112, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 上海2 = ss, 47.100.193.49, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 澳门2 = ss, 122.100.173.150, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 澳门6 = ss, 60.246.8.197, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 杭州 = ss, 47.99.140.189, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 台湾1 = ss, 47.100.175.206, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+台湾CHT5 = ss, 461.216.38.199, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 香港AZ2 = ss, 52.175.79.144, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 香港GT1 = ss, 193.110.202.198, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-香港GT2 = ss, 193.110.201.134, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+香港pccw = ss, 42.3.28.197, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 韩国SK1 = ss, 27.102.106.135, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 韩国KT2 = ss, 211.43.15.86, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 [Proxy Group]
@@ -82,6 +83,9 @@ RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Rule
 RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Telegram.list,Proxy
 # Local Area Network
 RULE-SET,LAN,DIRECT
+
+# China 中国直连规则
+RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/China.list,DIRECT
 // Accelerate direct sites
 DOMAIN-KEYWORD,torrent,DIRECT
 GEOIP,CN,DIRECT
