--- a/lhie1.conf
+++ b/lhie1.conf
@@ -28,10 +28,10 @@ proxy-test-url = http://www.qualcomm.cn/generate_204
 韩国SK1 = ss, 27.102.106.135, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 韩国KT2 = ss, 211.43.15.86, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 [Proxy Group]
-Proxy = select, 日本软银-1, 澳门2, 杭州, 香港AZ2, 日本ALI1, 日本ALI2, 香港GT2
+Proxy = select, 日本软银-1, 澳门2, 杭州, 香港AZ2, 日本ALI1, 日本ALI2, 香港pccw
 油管 = select, Proxy, 日本ALI1, 上海2, 日本软银-1
 tw = select, 日本软银-1, 台湾1
-game = select, DIRECT, Proxy, 香港AZ2, 香港GT1, 香港GT2, 杭州, 澳门2
+game = select, DIRECT, Proxy, 香港AZ2, 香港GT1, 杭州, 澳门2
 Advertising = select, REJECT
 🍎 = select, DIRECT, Proxy
 
