--- a/lhie1.conf
+++ b/lhie1.conf
@@ -23,6 +23,7 @@ proxy-test-url = http://www.qualcomm.cn/generate_204
 台湾1 = ss, 47.100.175.206, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 台湾CHT5 = ss, 61.216.38.199, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 香港AZ2 = ss, 52.175.79.144, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+香港IPLC4 = ss, 120.79.75.225, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 香港GT1 = ss, 193.110.202.198, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 香港pccw = ss, 42.3.28.197, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 韩国SK1 = ss, 27.102.106.135, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
