--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -576,6 +576,8 @@ DOMAIN,pvnapp.zol.com.cn,REJECT
 
 
 //me
+DOMAIN-SUFFIX,rdimg.com,DIRECT
+DOMAIN-SUFFIX,letsencrypt.org,DIRECT
 IP-CIDR,198.11.184.0/21,DIRECT
 IP-CIDR,198.11.128.0/18,DIRECT
 IP-CIDR,192.126.125.210/32,DIRECT
