--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -639,6 +639,9 @@ USER-AGENT,*youtube*,olo
 DOMAIN-SUFFIX,googlevideo.com,olo
 DOMAIN-SUFFIX,youtube.com,olo
 DOMAIN,youtubei.googleapis.com,olo
+USER-AGENT,com.google.ios.youtube*,olo
+USER-AGENT,YouTubeMusic*,olo
+
 
 //spark
 DOMAIN,api.amplitude.com,PROXY
@@ -675,24 +678,35 @@ DOMAIN-SUFFIX,windows.net,PROXY
 DOMAIN-SUFFIX,windowsupdate.com,PROXY
 
 //Apple
-IP-CIDR,17.0.0.0/8,PROXY,no-resolve
+
+DOMAIN,aod.itunes.apple.com,PROXY
+DOMAIN,audio.itunes.apple.com,PROXY
+DOMAIN,audio-ssl.itunes.apple.com,PROXY
+DOMAIN,streamingaudio.itunes.apple.com,PROXY
 DOMAIN,appleiphonecell.com,PROXY
 USER-AGENT,AppStore*,PROXY
 USER-AGENT,com.apple.appstored*,PROXY
 USER-AGENT,cloudd*,PROXY
-DOMAIN-KEYWORD,icloud,PROXY
-DOMAIN-KEYWORD,itunes,PROXY
 DOMAIN-SUFFIX,aaplimg.com,PROXY
-DOMAIN-SUFFIX,apple.co,PROXY
-DOMAIN-SUFFIX,apple.com,PROXY
 DOMAIN-SUFFIX,appsto.re,PROXY
 DOMAIN-SUFFIX,cdn-apple.com,PROXY
-DOMAIN-SUFFIX,me.com,PROXY
-DOMAIN-SUFFIX,mzstatic.com,PROXY
-DOMAIN-SUFFIX,icloud.com,PROXY
 DOMAIN-SUFFIX,icloud-content.com,PROXY
 DOMAIN-SUFFIX,itunes.com,PROXY
 DOMAIN-SUFFIX,itunes-apple.com.akadns.net,PROXY
+DOMAIN,beta.itunes.apple.com,PROXY
+DOMAIN,books.itunes.apple.com,PROXY
+DOMAIN,hls.itunes.apple.com,PROXY
+DOMAIN,itunes.apple.com,PROXY
+DOMAIN,api-glb-sea.smoot.apple.com,PROXY
+DOMAIN,lookup-api.apple.com,PROXY
+DOMAIN-SUFFIX,apple.co,DIRECT
+DOMAIN-SUFFIX,apple.com,DIRECT
+DOMAIN-SUFFIX,appstore.com,DIRECT
+DOMAIN-SUFFIX,crashlytics.com,DIRECT
+DOMAIN-SUFFIX,icloud.com,DIRECT
+DOMAIN-SUFFIX,me.com,DIRECT
+DOMAIN-SUFFIX,mzstatic.com,DIRECT
+IP-CIDR,17.0.0.0/8,DIRECT,no-resolve
 
 USER-AGENT,Argo*,PROXY
 DOMAIN-SUFFIX,netflix.com,PROXY
