--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -571,6 +571,7 @@ DOMAIN,img.auction-ads.wpscdn.cn,REJECT
 //me
 IP-CIDR,34.80.56.62/32,DIRECT,no-resolve
 
+DOMAIN,courier.sandbox.push.apple.com,DIRECT
 # > ali
 IP-CIDR,47.246.16.0/24,DIRECT,no-resolve
 IP-CIDR,205.204.96.0/19,DIRECT,no-resolve
