--- a/lhie1.conf
+++ b/lhie1.conf
@@ -13,26 +13,23 @@ internet-test-url = http://www.qualcomm.cn/generate_204
 proxy-test-url = http://www.qualcomm.cn/generate_204
 
 [Proxy]
-日本软银-1 = ss, 103.121.209.71, 11173, encrypt-method=chacha20, password=ss745201, udp-relay=true
-日本ALI1 = ss, 47.245.5.195, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-日本bbtec = ss, 103.125.250.112, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-上海2 = ss, 47.100.193.49, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-澳门2 = ss, 122.100.173.150, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-澳门6 = ss, 60.246.8.197, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-杭州 = ss, 47.99.140.189, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-台湾1 = ss, 47.100.175.206, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-台湾CHT5 = ss, 61.216.38.199, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-香港AZ2 = ss, 52.175.79.144, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-香港IPLC4 = ss, 120.79.75.225, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-香港GT1 = ss, 193.110.202.198, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-香港pccw = ss, 42.3.28.197, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-韩国SK1 = ss, 27.102.106.135, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-韩国KT2 = ss, 211.43.15.86, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+🇯🇵软银-1 = ss, 103.121.209.71, 11173, encrypt-method=chacha20, password=ss745201, udp-relay=true
+🇯🇵ALI1 = ss, 47.245.5.195, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+🇯🇵AZ = ss, 20.188.0.188, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+🇲🇴2 = ss, ctm2.0tk8a3a1q4t94dler.com, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+🇲🇴6 = ss, ctm6.0tk8a3a1q4t94dler.com, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+杭州🇭🇰AZ = ss, 47.99.140.189, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+🇨🇳CHT5 = ss, 61.216.38.199, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+🇭🇰AZ2 = ss, 52.175.79.144, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+深圳🇲🇴 = ss, 120.78.175.138, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+🇰🇷SK1 = ss, 27.102.106.135, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+🇰🇷KT2 = ss, 211.43.15.86, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+google = ss, 34.80.56.62, 543, encrypt-method=chacha20-ietf, password=ss745201, udp-relay=true
 [Proxy Group]
-Proxy = select, 日本软银-1, 日本bbtec, 澳门2, 杭州, 香港AZ2, 日本ALI1, 韩国KT2
-油管 = select, Proxy, 日本ALI1, 上海2, 日本软银-1, 日本bbtec
-tw = select, 日本软银-1, 台湾1
-game = select, DIRECT, Proxy, 香港AZ2, 香港GT1, 杭州, 澳门2
+Proxy = select, 🇲🇴2, 🇭🇰AZ2, 杭州🇭🇰AZ
+油管 = select, Proxy, google, 🇯🇵软银-1, 🇯🇵AZ, 🇰🇷KT2
+tw = select, Proxy, 🇨🇳CHT5🇲🇴2
+game = select, DIRECT, Proxy, 🇲🇴2
 Advertising = select, REJECT
 🍎 = select, DIRECT, Proxy
 
