--- a/lhie1.conf
+++ b/lhie1.conf
@@ -19,8 +19,8 @@ proxy-test-url = http://www.qualcomm.cn/generate_204
 🇲🇴2 = ss, ctm2.0tk8a3a1q4t94dler.com, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 🇲🇴6 = ss, ctm6.0tk8a3a1q4t94dler.com, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 杭州🇭🇰AZ = ss, 47.99.140.189, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-🇨🇳CHT5 = ss, 61.216.38.199, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
-🇭🇰AZ2 = ss, 52.175.79.144, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+🇨🇳CHT3 = ss, 125.227.83.18, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
+🇭🇰AZ2 = ss, 137.116.164.78, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 深圳🇲🇴 = ss, 120.78.175.138, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 🇰🇷SK1 = ss, 27.102.106.135, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 🇰🇷KT2 = ss, 211.43.15.86, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
@@ -28,7 +28,7 @@ google = ss, 34.80.56.62, 543, encrypt-method=chacha20-ietf, password=ss745201, 
 [Proxy Group]
 Proxy = select, 🇲🇴2, 🇭🇰AZ2, 杭州🇭🇰AZ
 油管 = select, Proxy, google, 🇯🇵软银-1, 🇯🇵AZ, 🇰🇷KT2
-tw = select, Proxy, 🇨🇳CHT5🇲🇴2
+tw = select, Proxy, 🇨🇳CHT5
 game = select, DIRECT, Proxy, 🇲🇴2
 Advertising = select, REJECT
 🍎 = select, DIRECT, Proxy
