--- a/lhie1.conf
+++ b/lhie1.conf
@@ -13,7 +13,7 @@ internet-test-url = http://www.qualcomm.cn/generate_204
 proxy-test-url = http://www.qualcomm.cn/generate_204
 
 [Proxy]
-🇯🇵软银-1 = ss, 103.121.209.71, 11173, encrypt-method=chacha20, password=ss745201, udp-relay=true
+🇯🇵软银-1 = ss, jp.001.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=ss745201, udp-relay=true
 🇯🇵ALI1 = ss, 47.245.5.195, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 🇯🇵AZ = ss, 20.188.0.188, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
 🇲🇴2 = ss, ctm2.0tk8a3a1q4t94dler.com, 37852, encrypt-method=xchacha20-ietf-poly1305, password=bpdftT, udp-relay=true
