--- a/lhie1.conf
+++ b/lhie1.conf
@@ -36,17 +36,10 @@ Advertising = select, REJECT
 [Rule]
 # SYSTEM直连规则
 RULE-SET,SYSTEM,DIRECT
-# Apple直连规则
-RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/apple.list,🍎
-DOMAIN-SUFFIX,apple.co,DIRECT
-DOMAIN-SUFFIX,apple.com,DIRECT
-DOMAIN-SUFFIX,crashlytics.com,DIRECT
 
-//Siri
-USER-AGENT,*AssistantServices*,DIRECT
-USER-AGENT,MobileAsset*,DIRECT
-USER-AGENT,Siri*,DIRECT
-USER-AGENT,*siri*,DIRECT
+# > Proxy
+PROCESS-NAME,v2ray,DIRECT
+PROCESS-NAME,ss-local,DIRECT
 
 # ME
 RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/reject.list,Advertising
@@ -79,21 +72,29 @@ DOMAIN-SUFFIX,hinet.net,tw
 # Global 全球加速规则
 RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Global.list,Proxy
 RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Telegram.list,Proxy
+RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/apple.list,Proxy
 # Local Area Network
 RULE-SET,LAN,DIRECT
 
 # China 中国直连规则
 RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/China.list,DIRECT
+
 // Accelerate direct sites
 DOMAIN-KEYWORD,torrent,DIRECT
 GEOIP,CN,DIRECT
 FINAL,Proxy,dns-failed
 
 [Host]
+*.taobao.com = server:223.5.5.5
+*.tmall.com = server:223.5.5.5
+
+[Header Rewrite]
+^https?://(www.)?zhihu\.com header-del Referer
+^https?://(www.)?zhihu\.com header-add Referer cache.baidu.com,cache.so.com,cache.sogou.com,cache.soso.com
+^https?://zhidao\.baidu\.com header-replace User-Agent Mozilla/5.0 (Macintosh; Intel Mac OS X 10_13_6) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/12.0.2 Safari/605.1.15
 
 [URL Rewrite]
-^https?://(www.)?g.cn https://www.google.com.tw 302
-^https?://(www.)?google.cn https://www.google.com.tw 302
+^https?:\/\/(www.)?(g|google)\.cn https://www.google.com.tw 302
 ^http://www.baidu.com https://www.baidu.com/?tn=simple 302
 ^http://baidu.com https://www.baidu.com/?tn=simple 302
 ^http://m.baidu.com https://www.baidu.com/?tn=simple 302
