--- a/lhie1.conf
+++ b/lhie1.conf
@@ -9,8 +9,8 @@ enhanced-mode-by-rule = true
 exclude-simple-hostnames = true
 hide-crashlytics-request = true
 replica = false
-internet-test-url = http://www.qualcomm.cn/generate_204
-proxy-test-url = http://www.qualcomm.cn/generate_204
+internet-test-url = http://www.gstatic.com/generate_204
+proxy-test-url = http://www.gstatic.com/generate_204
 
 [Proxy]
 🇯🇵软银-1 = ss, jp.001.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=ss745201, udp-relay=true
