--- a/lhie1.conf
+++ b/lhie1.conf
@@ -1,16 +1,10 @@
 [General]
 loglevel = notify
-skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,17.0.0.0/8,localhost,*.local,*.crashlytics.com
-bypass-system = true
+skip-proxy = 192.168.0.0/16, 193.168.0.0/24, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, 127.0.0.1, localhost, *.local
+ipv6 = false
+enhanced-mode-by-rule = 1
+show-error-page-for-reject = true
 dns-server = 119.29.29.29, 114.114.115.115, 117.50.10.10
-allow-wifi-access = false
-collapse-policy-group-items = true
-enhanced-mode-by-rule = true
-exclude-simple-hostnames = true
-hide-crashlytics-request = true
-replica = false
-internet-test-url = http://www.gstatic.com/generate_204
-proxy-test-url = http://www.gstatic.com/generate_204
 
 [Proxy]
 🇯🇵软银-1 = ss, jp.001.idcf.bilibili.center, 11173, encrypt-method=chacha20, password=ss745201, udp-relay=true
