--- a/lhie1.conf
+++ b/lhie1.conf
@@ -26,29 +26,31 @@ Proxy = select, 🇲🇴2, 🇭🇰AZ2, PCCW17, 杭州🇭🇰AZ
 油管 = select, Proxy, google, 🇯🇵软银-1, 🇯🇵AZ, 🇺🇸GIA, 深圳🇯🇵AZ
 tw = select, Proxy, 🇨🇳CHT2
 game = select, DIRECT, Proxy, 🇲🇴2
-Advertising = select, REJECT
+AD = select, REJECT
 
 [Rule]
 # SYSTEM直连规则
 RULE-SET,SYSTEM,DIRECT
 
-# > Proxy
 PROCESS-NAME,v2ray,DIRECT
 PROCESS-NAME,ss-local,DIRECT
-
-# ME
-RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/reject.list,Advertising
-RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/proxy.list,Proxy
-RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/direct.list,DIRECT
-RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/game.list,game
-
 DOMAIN,analytics.google.com,Proxy
 DOMAIN,analyticsinsights-pa.googleapis.com,Proxy
 DOMAIN,analyticsreporting.googleapis.com,Proxy
 DOMAIN,api.dizhensubao.igexin.com,DIRECT
 DOMAIN-SUFFIX,vd.l.qq.com,DIRECT
 
-# ForeignMedia 媒体应用
+# AD
+RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/reject.list,AD
+
+
+# Proxy
+RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/proxy.list,Proxy
+RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/game.list,game
+RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Global.list,Proxy
+RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Telegram.list,Proxy
+RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/apple.list,Proxy
+
 # > Youtube
 USER-AGENT,com.google.ios.youtube*,油管
 USER-AGENT,YouTube*,油管
@@ -57,26 +59,20 @@ DOMAIN-SUFFIX,googlevideo.com,油管
 DOMAIN-SUFFIX,youtube.com,油管
 DOMAIN,youtubei.googleapis.com,油管
 
-# > (TW)
-# > Bahamut
+# > 动漫疯
 USER-AGENT,Anime*,tw
 DOMAIN-SUFFIX,bahamut.com.tw,tw
 DOMAIN-SUFFIX,gamer.com.tw,tw
 DOMAIN-SUFFIX,hinet.net,tw
 
-# Global 全球加速规则
-RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Global.list,Proxy
-RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/Telegram.list,Proxy
-RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/apple.list,Proxy
-# Local Area Network
+
+#DIRECT
+RULE-SET,https://raw.githubusercontent.com/olocn/rule/master/direct.list,DIRECT
 RULE-SET,LAN,DIRECT
-
-# China 中国直连规则
-RULE-SET,https://raw.githubusercontent.com/ConnersHua/Profiles/master/Surge/Ruleset/China.list,DIRECT
-
-// Accelerate direct sites
 DOMAIN-KEYWORD,torrent,DIRECT
 GEOIP,CN,DIRECT
+
+
 FINAL,Proxy,dns-failed
 
 [Host]
