--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -387,13 +387,7 @@ DOMAIN-SUFFIX,baichuan.baidu.com,REJECT
 DOMAIN-SUFFIX,tuisong.baidu.com,REJECT
 DOMAIN-SUFFIX,itsdata.map.baidu.com,REJECT
 DOMAIN,loc.map.baidu.com,REJECT
-DOMAIN,api.map.baidu.com,REJECT
-DOMAIN,ps.map.baidu.com,REJECT
-DOMAIN,offnavi.map.baidu.com,REJECT
-DOMAIN,newvector.map.baidu.com,REJECT
-DOMAIN,newloc.map.n.shifen.com,REJECT
 DOMAIN,ulog.imap.baidu.com,REJECT
-DOMAIN,sv.map.baidu.com,REJECT
 DOMAIN-SUFFIX,data.haoma.sogou.com,REJECT
 DOMAIN-SUFFIX,sp0.baidu.com,REJECT
 DOMAIN-SUFFIX,udpolimenew.baidu.com,REJECT
@@ -406,25 +400,6 @@ DOMAIN,hmma.baidu.com,REJECT
 DOMAIN,nsclick.baidu.com,REJECT
 DOMAIN,wn.pos.baidu.com,REJECT
 
-
-# > ByteDance
-DOMAIN,applog.musical.ly,REJECT
-DOMAIN,track.toutiao.com,REJECT
-DOMAIN,xlog.snssdk.com,REJECT
-DOMAIN,xlog-va.byteoversea.com,REJECT
-# > BitAuto
-DOMAIN,adx.yiche.com,REJECT
-DOMAIN,log.ycapp.yiche.com,REJECT
-# > 百词斩
-DOMAIN,advertise.baicizhan.org,REJECT
-DOMAIN,advertise.baicizhan.com,REJECT
-# (C)
-# > CNTV
-DOMAIN,galaxy.bjcathay.com,REJECT
-DOMAIN,mdrecv.app.cntvwb.cn,REJECT
-DOMAIN,sdapprecv.app.cntvwb.cn,REJECT
-DOMAIN,vdapprecv.app.cntvwb.cn,REJECT
-
 # (G)
 # > Google
 DOMAIN-SUFFIX,doubleclick.net,REJECT
@@ -435,12 +410,7 @@ DOMAIN-SUFFIX,googletagmanager.com,REJECT
 DOMAIN-SUFFIX,googletagservices.com,REJECT
 DOMAIN-SUFFIX,google-analytics.com,REJECT
 
-# > HunanTV
-DOMAIN-SUFFIX,da.mgtv.com,REJECT
-DOMAIN-SUFFIX,da.hunantv.com,REJECT
-DOMAIN-SUFFIX,log.hunantv.com,REJECT
-DOMAIN,log.v2.hunantv.com,REJECT
-DOMAIN,v2.log.hunantv.com,REJECT
+
 
 # > iQiyi
 DOMAIN,ifacelog.iqiyi.com,REJECT
@@ -488,10 +458,6 @@ DOMAIN,de.as.pptv.com,REJECT
 DOMAIN,regist.fotoable.com,REJECT
 DOMAIN,cdn.adapi.fotoable.com,REJECT
 
-# > PeanutWiFiMpass
-DOMAIN,adnew.wifi8.com,REJECT
-DOMAIN,adfile.wifi8.com,REJECT
-
 # > Sina
 DOMAIN,u1.img.mobile.sina.cn,REJECT
 DOMAIN,sax.sina.com.cn,REJECT
@@ -528,13 +494,6 @@ DOMAIN,admonitor.thepaper.cn,REJECT
 # > 同花顺
 DOMAIN,adm.10jqka.com.cn,REJECT
 DOMAIN,stat.10jqka.com.cn,REJECT
-
-# > 太平洋
-DOMAIN,ad-analysis.pconline.com.cn,REJECT
-DOMAIN,iad0ssl.pcauto.com.cn,REJECT
-DOMAIN,iad0ssl.pconline.com.cn,REJECT
-DOMAIN,imgad0.pcauto.com.cn,REJECT
-DOMAIN,imgad0.pconline.com.cn,REJECT
 DOMAIN,ivy.pchouse.com.cn,REJECT
 
 # (U)
@@ -548,10 +507,6 @@ DOMAIN,track.uc.cn,REJECT
 DOMAIN-SUFFIX,atm.youku.com,REJECT
 DOMAIN,ad.mobile.youku.com,REJECT
 DOMAIN,iyes.youku.com,REJECT
-# (Z)
-# > ZOL
-DOMAIN,apppv.zol.com.cn,REJECT
-DOMAIN,pvnapp.zol.com.cn,REJECT
 
 
 //me
@@ -570,8 +525,6 @@ DOMAIN,img.auction-ads.wpscdn.cn,REJECT
 
 //me
 IP-CIDR,34.80.56.62/32,DIRECT,no-resolve
-
-DOMAIN,courier.sandbox.push.apple.com,DIRECT
 # > ali
 IP-CIDR,47.246.16.0/24,DIRECT,no-resolve
 IP-CIDR,205.204.96.0/19,DIRECT,no-resolve
@@ -584,7 +537,6 @@ DOMAIN-SUFFIX,rdimg.com,DIRECT
 DOMAIN-SUFFIX,letsencrypt.org,DIRECT
 
 
-DOMAIN,e.crashlytics.com,DIRECT
 DOMAIN-SUFFIX,cmbchina.com,DIRECT
 DOMAIN-SUFFIX,tiqcdn.com,DIRECT
 DOMAIN-SUFFIX,aolcdn.com,DIRECT
@@ -651,9 +603,7 @@ DOMAIN,gate.hockeyapp.net,PROXY
 DOMAIN-SUFFIX,smartmailcloud.com,PROXY
 
 // Microsoft
-USER-AGENT,Microsoft*,PROXY
-USER-AGENT,OneDrive*,PROXY
-DOMAIN-KEYWORD,microsoft,PROXY
+USER-AGENT,onenote*,PROXY
 DOMAIN-SUFFIX,bing.com,PROXY
 DOMAIN-SUFFIX,bing.net,PROXY
 DOMAIN-SUFFIX,cloudappsecurity.com,PROXY
@@ -679,27 +629,23 @@ DOMAIN-SUFFIX,windows.net,PROXY
 DOMAIN-SUFFIX,windowsupdate.com,PROXY
 
 //Apple
+# > App Store Download || iBooks Sample
+DOMAIN-SUFFIX,itunes.apple.com,PROXY
 
+# > Apple Music
 DOMAIN,aod.itunes.apple.com,PROXY
 DOMAIN,audio.itunes.apple.com,PROXY
 DOMAIN,audio-ssl.itunes.apple.com,PROXY
 DOMAIN,streamingaudio.itunes.apple.com,PROXY
+
 DOMAIN,appleiphonecell.com,PROXY
-USER-AGENT,AppStore*,PROXY
-USER-AGENT,com.apple.appstored*,PROXY
-USER-AGENT,cloudd*,PROXY
+
 DOMAIN-SUFFIX,aaplimg.com,PROXY
 DOMAIN-SUFFIX,appsto.re,PROXY
 DOMAIN-SUFFIX,cdn-apple.com,PROXY
 DOMAIN-SUFFIX,icloud-content.com,PROXY
-DOMAIN-SUFFIX,itunes.com,PROXY
-DOMAIN-SUFFIX,itunes-apple.com.akadns.net,PROXY
-DOMAIN,beta.itunes.apple.com,PROXY
-DOMAIN,books.itunes.apple.com,PROXY
-DOMAIN,hls.itunes.apple.com,PROXY
-DOMAIN,itunes.apple.com,PROXY
-DOMAIN,api-glb-sea.smoot.apple.com,PROXY
-DOMAIN,lookup-api.apple.com,PROXY
+
+DOMAIN-SUFFIX,itunes.com,DIRECT
 DOMAIN-SUFFIX,apple.co,DIRECT
 DOMAIN-SUFFIX,apple.com,DIRECT
 DOMAIN-SUFFIX,appstore.com,DIRECT
